2024-05-15 Giovanny Covarrubias Pazaran <cova_ruber@live.com.mx>

      * [r_1.0.1] Initial release bringing the best ideas of sommer into the powerful horse of Douglas Bates' and team lme4.
       
2024-06-24 Giovanny Covarrubias Pazaran <cova_ruber@live.com.mx>

      * [r_1.0.21] The eigen decomposition has been improved by adding an outlier coefficient to avoid overshooting.
      * [r_1.0.22] The eigen decomposition now allows multiple random effects although we still need balanced data to make it work.
      * [r_1.0.31] Warning messages removed when using the lFormula function

2024-06-24 Giovanny Covarrubias Pazaran <cova_ruber@live.com.mx>

      * [r_1.0.40] 'simage' function added for sparsity plots and better documentation of GxE models

2025-04-27 Giovanny Covarrubias Pazaran <cova_ruber@live.com.mx>

      * [r_1.0.60] enhanced the 'start' and 'returnMod' arguments to do prediction of unobserved levels
      * [r_1.0.60] corrected the optimizer selection in glms 
      * [r_1.0.60] minor modifications to getMME function

2025-07-27 Giovanny Covarrubias Pazaran <cova_ruber@live.com.mx>

      * [r_1.0.70] updated CRAN version