@@ -31,6 +31,8 @@ head(DT)
 mix <- lmebreed(stems~1 + (1|female)+(1|male), data=DT)
 vc <- VarCorr(mix); print(vc,comp=c("Variance"))
 sigma(mix)^2 # error variance
+BLUP <- ranef(mix, condVar=TRUE)
+SEs <- attr(BLUP$female, which="postVar")[,,]
 
 }
 \keyword{datasets}
