@@ -52,6 +52,8 @@ mix1 <- lmebreed(BWT~ (1|ANIMAL),
                  data=DT)
 vc <- VarCorr(mix1); print(vc,comp=c("Variance"))
 sigma(mix1)^2 # error variance
+BLUP <- ranef(mix1, condVar=TRUE)
+SEs <- attr(BLUP$ANIMAL, which="postVar")[,,]
 
 }
 
